[package]
name = "kiro-proxy"
version = "0.1.0"
edition = "2021"
description = "Lightweight Kiro API proxy - OpenAI and Anthropic compatible"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
subtle = "2"
hex = "0.4"
base64 = "0.22"
regex = "1"
rand = "0.8"
urlencoding = "2"

# Async utilities
async-trait = "0.1"
async-stream = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Password hashing
argon2 = "0.5"

# Concurrent caches
dashmap = "6"

# Cookie support
axum-extra = { version = "0.7", features = ["cookie"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
